--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
      background-repeat: repeat-x;
      background-size: contain;
      width: 100%;
-     height: 85vh;
+     height: 800px;
  }
  #footer{
      position: absolute;
@@ -18,7 +18,7 @@ body{
      background-repeat: repeat-x;
      background-size: contain;
      width: 100%;
-     height: 15vh;
+     height: 200px;
  }
  .animation{
      animation: moveLeft 3000s infinite linear;
