--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body{
     background-color: rgb(131, 226, 142);
 
 }
+h2{
+    text-align: center;
+    font-size: 50px;
+}
  #background{
      position: absolute;
      background-image: url('./img/background.png');
@@ -39,8 +43,6 @@ body{
     /* height: 300px; */
     background-image: url('./img/pipe.png');
     background-size: 100% 100%;
-    
-    
 }
 
  @keyframes moveLeft{
